/*
 * Teleport
 * Copyright (C) 2025 Gravitational, Inc.
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU Affero General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU Affero General Public License for more details.
 *
 * You should have received a copy of the GNU Affero General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */

syntax = "proto3";

package teleport.lib.teleterm.v1;

import "teleport/lib/teleterm/v1/label.proto";

option go_package = "github.com/gravitational/teleport/gen/proto/go/teleport/lib/teleterm/v1;teletermv1";

// WindowsDesktop describes a Windows desktop resource.
message WindowsDesktop {
  // uri uniquely identifies the Windows desktop within Teleport Connect.
  string uri = 1;
  // name is the name of the desktop.
  string name = 2;
  // address of the desktop.
  // Omits the port if it's the default RDP port (3389).
  string addr = 3;
  // logins available for the desktop.
  repeated string logins = 4;
  // labels is a list of labels for the desktop.
  repeated Label labels = 5;
}
